tests/negative/test_expr_deref_ptr_cn.orb
fnc main() {
    let i32 x;
    let ptr cn p = ptr(&x);
    *p;
}